Adopt FIFO queue model for auction tracker